# sakuramoti

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pre-commit.yml  test.yaml
demo/omnimotion/preprocessing/: exhaustive_raft.py  extract_dino_features.py  filter_raft.py  main_processing.py
demo/raft/: chain_demo.py  demo.py
demo/tapvid/: rainbow.ipynb
demo/visualizer/: show_optical_flow.py
notebook/: raft-chain-demo.ipynb  raft-demo.ipynb
src/sakuramoti/features/dino/: vit.py
src/sakuramoti/features/dinov2/: vision_transformer.py
src/sakuramoti/flow_model/pips/: corr.py  extractor.py  mlp_mixer.py  pips.py  utils.py
src/sakuramoti/flow_model/raft/: __init__.py  chain.py  corr.py  exhaustive.py  extractor.py  raft.py  raft_extension.py  update.py  utils.py
src/sakuramoti/geometry/: grid.py
src/sakuramoti/io/: __init__.py  io.py
src/sakuramoti/losses/: balanced_ce_loss.py  sequence_loss.py  utils.py
src/sakuramoti/metrics/: end_point_error.py
src/sakuramoti/metrics/tapvid/: download_tapvid_benchmark.py
src/sakuramoti/transformation/: __init__.py  pad.py
src/sakuramoti/utils/: __init__.py  hub.py
src/sakuramoti/visualizer/: optical_flow.py
tests/: base.py
tests/geometry/: test_grid.py  test_normalization.py
tests/loss/: test_ba_ce_loss.py  test_sequence_loss.py  test_utils.py
tests/metrics/: test_epe.py
tests/model/pips/: test_mlpmixer.py  test_pips.py
tests/model/raft/: test_extractor.py  test_raft.py
tests/visualizer/: test_optical_flow.py
