[tool.poetry]
name = "sakuramoti"
version = "0.1.0"
description = ""
authors = ["kololu777"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
torch = "^2.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
mypy = "^1.10.0"
opencv-python = "^4.10.0.82"
pillow = "^10.3.0"
numpy = "^1.26.4"
scipy = "^1.13.1"
pytest = "^8.2.2"
ipykernel = "^6.29.4"
scikit-learn = "^1.5.0"
einops = "^0.8.0"
matplotlib = "3.5.2"
tensorboardx = "^2.6.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
