[project]
name = "sakuramoti"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kololu777", email = "kosiynon31kos@gmail.com" }
]
dependencies = [
    "torch>=2.4.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.5",
    "mypy>=1.11.1",
    "opencv-python>=4.10.0.84",
    "pillow>=10.4.0",
    "numpy>=2.0.1",
    "pytest>=8.3.2",
    "scikit-learn>=1.5.1",
    "ipykernel>=6.29.5",
    "einops>=0.8.0",
    "matplotlib>=3.9.1",
    "tensorboardx>=2.6.2.2",
    "kornia>=0.7.3",
    "torchshow>=0.5.1",
    "pytest-cov>=5.0.0",
    "mediapy>=1.2.2",
    "mako>=1.3.5",
    "flow-vis>=0.1",
    "torchvision>=0.19.0",
    "tqdm>=4.66.5",
    "google>=3.0.0",
    "absl-py>=2.1.0",
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sakuramoti"]
